--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,7 @@ requires = ["setuptools>=61.0"]
 build-backend = "setuptools.build_meta"
 
 [project]
-name = "eco-counter-domain-updater"
+name = "ecocounterdomainupdater"
 version = "1.0.0"
 dependencies = [
     "requests==2.32.3"
