--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,7 @@ requires = ["setuptools>=61.0"]
 build-backend = "setuptools.build_meta"
 
 [project]
-name = "ecocounterdomainupdater"
+name = "traffic-data-domain-updater"
 version = "1.0.0"
 dependencies = [
     "requests==2.32.3"
@@ -18,8 +18,8 @@ classifiers = [
 ]
 
 [project.urls]
-Homepage = "https://github.com/cboehme/eco-counter-domain-updater"
-Repository = "https://github.com/cboehme/eco-counter-domain-updater.git"
+Homepage = "https://github.com/cboehme/traffic-data-domain-updater"
+Repository = "https://github.com/cboehme/traffic-data-domain-updater.git"
 
 [project.scripts]
-ec-domain-updater = "ecocounterdomainupdater.updater:main"
+traffic-data-domain-updater = "trafficdatadomainupdater.updater:main"
