--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,7 +15,7 @@
 # along with this program.  If not, see <https://www.gnu.org/licenses/>.
 
 [build-system]
-requires = ["setuptools>=61.0"]
+requires = ["setuptools>=77.0"]
 build-backend = "setuptools.build_meta"
 
 [project]
@@ -30,8 +30,10 @@ authors = [
 ]
 classifiers = [
     "Development Status :: 5 - Production/Stable",
-    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)"
 ]
+
+license = "GPL-3.0-or-later"
+license-files = ["LICENSE"]
 
 [project.urls]
 Homepage = "https://github.com/cboehme/traffic-data-domain-updater"
