--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,12 +15,12 @@
 # along with this program.  If not, see <https://www.gnu.org/licenses/>.
 
 [build-system]
-requires = ["setuptools>=77.0"]
+requires = ["setuptools>=77.0", "setuptools-scm>=8"]
 build-backend = "setuptools.build_meta"
 
 [project]
 name = "traffic-data-domain-updater"
-version = "1.0.0"
+dynamic = ["version"]
 dependencies = [
     "requests==2.32.3"
 ]
@@ -38,3 +38,8 @@ license-files = ["LICENSE"]
 [project.urls]
 Homepage = "https://github.com/cboehme/traffic-data-domain-updater"
 Repository = "https://github.com/cboehme/traffic-data-domain-updater.git"
+
+[tool.setuptools_scm]
+tag_regex = "^release/(?P<version>\\d+\\.\\d+.\\d+)$"
+version_file = "docker-build.args"
+version_file_template = "VERSION={version}"
