Add fallback_version option
The build should not fail if git-based versioning is not available.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -43,3 +43,4 @@ Repository = "https://github.com/cboehme/traffic-data-domain-updater.git"
 tag_regex = "^release/(?P<version>\\d+\\.\\d+.\\d+)$"
 version_file = "docker-build.args"
 version_file_template = "VERSION={version}"
+fallback_version = "0.0.0-NO-GIT-BASED-VERSIONING"
